# audiobook-optimizer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  docker-build-push.yml
scripts/: process-staging.sh
src/audiobook_optimizer/: __init__.py  cli.py  config.py
src/audiobook_optimizer/adapters/: ai_advisor.py  ai_batch.py  ai_metadata.py  ffmpeg.py  filesystem.py  tagger.py
src/audiobook_optimizer/domain/: models.py
src/audiobook_optimizer/ports/: interfaces.py
src/audiobook_optimizer/services/: processor.py
tests/: conftest.py  test_domain.py  test_integration.py
